--- a/templates/dashboard/tools/youtube_like.html
+++ b/templates/dashboard/tools/youtube_like.html
@@ -37,49 +37,26 @@
             {% csrf_token %}
             <div class="row">
                <div class="col-md-12">
-                <div class="caption m-t-15">
-                     <div class="form-group">
-                       <label for="account">Group</label>
-                       <select class="select form-control" id="group_name" name="group_name">
-                         <option value="">--- Like with a Group ---</option>
-                         {% for group in user_groups %}
-                           <option value="{{group.id}}">{{group.name}}</option>
-                         {% endfor %}
-                       </select>
-                     </div>
-                  </div>
-                  <div class="caption m-t-15">
-                     <div class="form-group">
-                       <label for="account">Account</label>
-                       <select class="select form-control" id="youtube_email" name="youtube_email">
-                         <option value="">--- Like with a Account ---</option>
-                         {% for account in user_accounts %}
-                           <option value="{{account.id}}">{{account.email}}</option>
-                         {% endfor %}
-                       </select>
-                     </div>
-                  </div>
+                  
+
                   <div class="form-group">
                      <label for="video_url">{% trans 'Video url' %}</label>
                      <input id="video_url" type="text" class="form-control" name="video_url" placeholder="{% trans 'Enter Video Url' %}" required="True" required="required"/>
                   </div>
                   <div class="form-group">
-                     <input type="checkbox" id="like_video" name="like_video" value="True">
-                  <label for="like_post"> {% trans 'likeVideo' %}</label><br>
+                     <label for="code">{% trans 'Likes' %}</label>
+                     <input type="number" class="form-control" name="your_likes" placeholder="{% trans 'enter number of Likes ' %}" required="True" min="1" />
                   </div>
-
-                  <!-- <div class="form-group">
-                     <input type="checkbox" id="cmnt_video" name="cmnt_post" value="True">
-                  <label for="cmnt_post"> {% trans 'commentVideo' %}</label><br>
-                  </div> -->
-
                   <div class="form-group">
-                  <span>{% trans 'currentTimezone' %}: {{user.timezone}}</span><a href="{% url 'account' %}" style="float: right;"><i class="far fa-edit"></i> {% trans 'edit' %}</a>
+                     <span>{% trans 'currentTimezone' %}: {{user.timezone}}</span><a href="{% url 'account' %}" style="float: right;"><i class="far fa-edit"></i> {% trans 'edit' %}</a>
                   </div>
                   <input type="hidden" name="timezone" value="{{user.timezone}}">
                   <input type="hidden" name="admin_user_id" value="{{ user.id }}">
+                  <input type="hidden" id="insta_user_id" name="insta_user_id">
                   <button type="submit" class="btn btn-primary">{% trans 'submit' %}</button>
-               </div>
+
+
+            </div>
             </div>
          </form>
       </div>
