--- a/templates/dashboard/tools/youtube_cmnt.html
+++ b/templates/dashboard/tools/youtube_cmnt.html
@@ -43,7 +43,7 @@
                   </div>
                    <div class="form-group">
                      <label for="list">{% trans 'Comments' %}</label>
-                     <input type="text" class="form-control" name="your_cooment_list" placeholder="{% trans 'enter the list of comments ' %}" required="True" min="1" />
+                     <input type="text" class="form-control" name="your_cooment_list" placeholder="{% trans 'enter the list of comments ' %}"  min="1" />
                   </div>
                    <div class="form-group">
                      <label for="code">{% trans 'Comment number' %}</label>
